- [BUGFIX] Improve appearance on small devices

--- a/Resources/Public/Css/style.css
+++ b/Resources/Public/Css/style.css
@@ -29,6 +29,8 @@
     background-color: #fff;
     border-radius: 0.5rem;
     box-shadow: 0 11px 15px -7px rgba(0,0,0,.2),0 24px 38px 3px rgba(0,0,0,.14),0 9px 46px 8px rgba(0,0,0,.12);
+    overflow-y: auto;
+    max-height: calc(100vh - 7rem);
 }
 
 @media screen and (min-width: 576px) {
